--- a/Sistema OS - Assistência Técnica/3 - Forms/form_Principal.resx
+++ b/Sistema OS - Assistência Técnica/3 - Forms/form_Principal.resx
@@ -121,6 +121,16 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnLucrosPrejuizos.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMQAAABGCAYAAACT3ju4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADZSURBVHhe7dMhEcQwAADBKE+9RURIZVRAf54dqIMsWHT4
+        xtzrvvZ64XT/F8ZXgFMZAsIQEIaAMASEISAMAWEICENAGALCEBCGgDAEhCEgDAFhCAhDQBgCwhAQhoAw
+        BIQhIAwBYQgIQ0AYAsIQEIaAMASEISAMAWEICENAGALCEBCGgDAEhCEgDAFhCAhDQBgCwhAQhoAwBIQh
+        IAwBYQgIQ0AYAsIQEIaAMASEISAMAWEICENAGALCEBCGgDAEhCEgDAFhCAhDQBgCwhAQhoAYc6/nK8Bp
+        5l7PDwp4bFh0PnoaAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnServicosConcluidos.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAMQAAABGCAYAAACT3ju4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -409,18 +419,9 @@
   <data name="pnlDesktop.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABJoAAAH8CAYAAACZ/MVmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAA4WSURBVHhe7dixTcNgFEZRl4xBSckoGYGSMRjT9m/JowBW
-        XKFICXDL80mneXoT3MnMzMzMzMzMzCzdvu/PY4wPAAAAAHjUPM8vZ166blmW123bPgEAAADgt8YYlzMz
-        TdNRn249AQAAAMA9R1s6M5PQBAAAAMDfCU0AAAAAJIQmAAAAABJCEwAAAAAJoQkAAACAhNAEAAAAQEJo
-        AgAAACAhNAEAAACQEJoAAAAASAhNAAAAACSEJgAAAAASQhMAAAAACaEJAAAAgITQBAAAAEBCaAIAAAAg
-        ITQBAAAAkBCaAAAAAEgITQAAAAAkhCYAAAAAEkITAAAAAAmhCQAAAICE0AQAAABAQmgCAAAAICE0AQAA
-        AJAQmgAAAABICE0AAAAAJIQmAAAAABJCEwAAAAAJoQkAAACAhNAEAAAAQEJoAgAAACAhNAEAAACQEJoA
-        AAAASAhNAAAAACSEJgAAAAASQhMAAAAACaEJAAAAgITQBAAAAEBCaAIAAAAgITQBAAAAkBCaAAAAAEgI
-        TQAAAAAkhCYAAAAAEkITAAAAAAmhCQAAAICE0AQAAABAQmgCAAAAICE0AQAAAJAQmgAAAABICE0AAAAA
-        JIQmAAAAABJCEwAAAAAJoQkAAACAhNAEAAAAQEJoAgAAACAhNAEAAACQEJoAAAAASAhNAAAAACSEJgAA
-        AAASQhMAAAAACaEJAAAAgITQBAAAAEBCaAIAAAAgITQBAAAAkBCaAAAAAEgITQAAAAAkhCYAAAAAEkIT
-        AAAAAAmhCQAAAICE0AQAAABAQmgCAAAAICE0AQAAAJAQmgAAAABICE0AAAAAJIQmAAAAABJCEwAAAAAJ
-        oQkAAACAhNAEAAAAQEJoAgAAACAhNAEAAACQEJoAAAAASAhNAAAAACSEJgAAAAASQhMAAAAACaEJAAAA
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAA4USURBVHhe7dqxTUMxAEXRX7IFKSkQZIMsECUZgZIxsjn4
+        EzcgJL7ILc+TTmN7gisvZmZmZmZmZmZm6V7P591wBQAAAICtno/Hp5mXbhuH++EDAAAAAP7hMjPTV2ha
+        C9RvjwAAAADgL9eZmYQmAAAAAO4iNAEAAACQEJoAAAAASAhNAAAAACSEJgAAAAASQhMAAAAACaEJAAAA
         gITQBAAAAEBCaAIAAAAgITQBAAAAkBCaAAAAAEgITQAAAAAkhCYAAAAAEkITAAAAAAmhCQAAAICE0AQA
         AABAQmgCAAAAICE0AQAAAJAQmgAAAABICE0AAAAAJIQmAAAAABJCEwAAAAAJoQkAAACAhNAEAAAAQEJo
         AgAAACAhNAEAAACQEJoAAAAASAhNAAAAACSEJgAAAAASQhMAAAAACaEJAAAAgITQBAAAAEBCaAIAAAAg
@@ -468,8 +469,17 @@
         gITQBAAAAEBCaAIAAAAgITQBAAAAkBCaAAAAAEgITQAAAAAkhCYAAAAAEkITAAAAAAmhCQAAAICE0AQA
         AABAQmgCAAAAICE0AQAAAJAQmgAAAABICE0AAAAAJIQmAAAAABJCEwAAAAAJoQkAAACAhNAEAAAAQEJo
         AgAAACAhNAEAAACQEJoAAAAASAhNAAAAACSEJgAAAAASQhMAAAAACaEJAAAAgITQBAAAAEBCaAIAAAAg
-        ITQBAAAAkBCaAAAAAEgITQAAAAAkhCYAAAAAEkITAAAAAAmhCQAAAIDEz9B0ufUEAAAAAPes6/p+Zqbr
-        vo9vR30CAAAAgEcdkWnf96czMZmZmZmZmZmZmf130/QFADQ9NXy/GCoAAAAASUVORK5CYII=
+        ITQBAAAAkBCaAAAAAEgITQAAAAAkhCYAAAAAEkITAAAAAAmhCQAAAICE0AQAAABAQmgCAAAAICE0AQAA
+        AJAQmgAAAABICE0AAAAAJIQmAAAAABJCEwAAAAAJoQkAAACAhNAEAAAAQEJoAgAAACAhNAEAAACQEJoA
+        AAAASAhNAAAAACSEJgAAAAASQhMAAAAACaEJAAAAgITQBAAAAEBCaAIAAAAgITQBAAAAkBCaAAAAAEgI
+        TQAAAAAkhCYAAAAAEkITAAAAAAmhCQAAAICE0AQAAABAQmgCAAAAICE0AQAAAJAQmgAAAABICE0AAAAA
+        JIQmAAAAABJCEwAAAAAJoQkAAACAhNAEAAAAQEJoAgAAACAhNAEAAACQEJoAAAAASAhNAAAAACSEJgAA
+        AAASQhMAAAAACaEJAAAAgITQBAAAAEBCaAIAAAAgITQBAAAAkBCaAAAAAEgITQAAAAAkhCYAAAAAEkIT
+        AAAAAAmhCQAAAICE0AQAAABAQmgCAAAAICE0AQAAAJAQmgAAAABICE0AAAAAJIQmAAAAABJCEwAAAAAJ
+        oQkAAACAhNAEAAAAQEJoAgAAACAhNAEAAACQEJoAAAAASAhNAAAAACSEJgAAAAASQhMAAAAACaEJAAAA
+        gITQBAAAAEBCaAIAAAAgITQBAAAAkBCaAAAAAEgITQAAAAAkhCYAAAAAEkITAAAAAAmhCQAAAICE0AQA
+        AABAQmgCAAAAICE0AQAAAJAQmgAAAABICE0AAAAAJIQmAAAAABLfQtPlxyUAAAAAbPJyOr3PzHTbOHwb
+        1p9NAAAAALDJGpkeD4eHmZjMzMzMzMzMzMzu3bJ8AmqkJHBP3tI5AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="bunifuSeparator6.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
